# j_p_1

./: Procfile  README.md  manage.py  pyproject.toml  requirements.txt
accunts_detale/: apps.py  form.py  urls.py  views.py
home/: admin.py  models.py  urls.py  views.py
home/migrations/: 0001_initial.py
nsfirst/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: faradars_in_mobile4.css
template/: base.html  create_user.html  faradars-in-mobile-4.html  form-enter-2.html  form-forget-pass.html  form-logic.html  lable.html  p_detale.html  p_list.html  prodact1.html  saina.html  succes.html
template/registration/: Regester.html  login.html
